--- a/src/components/chat/ChatItem.module.css
+++ b/src/components/chat/ChatItem.module.css
@@ -7,7 +7,7 @@
   padding: 1rem;
   background-color: var(--beige-color);
   color: #565656;
-  border-radius: 0.5rem;
+  border-radius: 1rem;
 }
 
 .my-box {
